--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mosspit</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div> <!-- Navigation -->
+  <div class="Navigation"> <!-- Navigation -->
     <div>
       <img src="placeholder.png">
       <p>PLACEHOLDER</p>
