--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 <body>
   <div class="Navigation"> <!-- Navigation -->
     <div>
-      <img src="placeholder.png">
+      <img src="img/home.png">
       <p>PLACEHOLDER</p>
     </div>
     <div>
-      <img src="placeholder.png">
+      <img src="img/home.png">
       <p>Könige</p>
     </div>
     <div>
-      <img src="placeholder.png">
+      <img src="img/home.png">
       <p>Home</p>
     </div>
     <div>
-      <img src="placeholder.png">
+      <img src="img/home.png">
       <p>Projekte</p>
     </div>
     <div>
-      <img src="placeholder.png">
+      <img src="img/home.png">
       <p>Mitglieder</p>
     </div>
   </div>
