--- a/index.html
+++ b/index.html
@@ -1,53 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mosspit</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/navbar.css">
 </head>
+
 <body>
-  <div class="Navigation"> <!-- Navigation -->
-    <div>
-      <img src="img/home.png">
-      <p>PLACEHOLDER</p>
-    </div>
-    <div>
-      <img src="img/home.png">
-      <p>Könige</p>
-    </div>
-    <div>
-      <img src="img/home.png">
-      <p>Home</p>
-    </div>
-    <div>
-      <img src="img/home.png">
-      <p>Projekte</p>
-    </div>
-    <div>
-      <img src="img/home.png">
-      <p>Mitglieder</p>
+  <nav class="navbar">
+    <a href="#">Mitglieder</a>
+    <a href="#Projects">Projekte</a>
+    <a href="#home">Home</a>
+    <a href="#">Könige</a>
+    <a href="#">Placeholder</a>
+  </nav>
+
+  <div class="home" id="home"> <!-- Home -->
+    <img src="img/MOSSPIT.png">
+    <div class="home-unten">
+      <a href="https://castcrafter.de" target="_blank">
+        <img src="img/castcrafter.de.png">
+        <p>Castcrafter</p>
+      </a><a href="https://discord.gg/JpqFfeCd6W" target="_blank">
+        <img src="img/discord.png">
+        <p>Mosspit</p>
+      </a>
     </div>
   </div>
-
-  <div> <!-- kinda header -->
-    <div> <!-- oben -->
-      <div>Castcrafter.de</div>
-      <div>
-        <img src="img/MOSSPIT.png">
-      </div>
-      <div>discord.gg</div>
-    </div>
-    <div> <!-- unten -->
-      <div> <!-- Current Project-->
-
-      </div>
-      <div> <!-- Facts -->
-
-      </div>
-    </div>
-  </div>
-
   <div>
     <p class="EintragH1"></p>
     <div> <!-- Images -->
@@ -74,4 +56,5 @@
 
   </div>
 </body>
+
 </html>
