--- a/ausprobieren.html
+++ b/ausprobieren.html
@@ -1,55 +1,36 @@
+<!DOCTYPE html>
+<html lang="de">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Fotosammlung Projekt</title>
   <link rel="stylesheet" href="css/ausprobieren.css">
 </head>
 
 <body>
-  <div>
-    <table>
-      <tr class="preject1">
-        <p>Projekt 1</p>
-        <td>
-          <div><img src="img/projects/3.1.png">
-            <p>KrasserTurm</p>
-          </div></td>
-        <td>
-          <div><img src="img/projects/3.1.png">
-            <p>KrasserTurm</p>
-          </div></td>
-        <td>
-          <div><img src="img/projects/3.1.png">
-            <p>KrasserTurm</p>
-          </div></td>
-      </tr>
-      <tr class="preject2">
-        <td>
-          <div><img src="img/projects/3.1.png">
-            <p>KrasserTurm</p>
-          </div></td>
-        <td>
-          <div><img src="img/projects/3.1.png">
-            <p>KrasserTurm</p>
-          </div></td>
-        <td>
-          <div><img src="img/projects/3.1.png">
-            <p>KrasserTurm</p>
-          </div></td>
-      </tr>
-      <tr class="preject3">
-        <td>
-          <div><img src="img/projects/3.1.png">
-            <p>KrasserTurm</p>
-          </div>
-        </td>
-        <td>
-          <div><img src="img/projects/3.1.png">
-            <p>KrasserTurm</p>
-          </div></td>
-        <td>
-          <div><img src="img/projects/3.1.png">
-            <p>KrasserTurm</p>
-          </div></td>
-      </tr>
-    </table>
+  <div class="projekte">
+    <p>Projekte</p>
+    <div class="grid">
+      <div>
+        <img src="https://ik.imagekit.io/e94eymdlx/NoHeightLimit/Bild6?updatedAt=1740325149589" alt="Image 1">
+        <label for="image1">Projekt3</label>
+      </div>
+      <div>
+        <img src="https://ik.imagekit.io/e94eymdlx/NoHeightLimit/Bild6?updatedAt=1740325149589" alt="Image 1">
+        <label for="image1">Projekt2</label>
+      </div>
+      <div>
+        <img src="https://ik.imagekit.io/e94eymdlx/NoHeightLimit/Bild6?updatedAt=1740325149589" alt="Image 1">
+        <label for="image1">✉️✉️✉️</label>
+      </div>
 
+    </div>
   </div>
+
+  <script>
+    console.log("Code loaded");
+  </script>
 </body>
+
+</html>
